--- a/common/src/main/resources/assets/supplementaries/lang/de_de.json
+++ b/common/src/main/resources/assets/supplementaries/lang/de_de.json
@@ -18,20 +18,20 @@
   "block.supplementaries.sconce": "Wandfackel",
   "block.supplementaries.sconce_soul": "Seelen Wandfackel",
   "block.supplementaries.sconce_ender": "Ender Wandfackel",
-  "block.supplementaries.sconce_glow": "Glow Sconce",
+  "block.supplementaries.sconce_glow": "Leuchtende Wandfackel",
   "block.supplementaries.sign_post": "Wegweiser",
   "block.supplementaries.candelabra": "Goldener Kerzenhalter",
   "gui.supplementaries.speaker_block.edit": "Lautsprecher Nachricht bearbeiten",
-  "gui.supplementaries.speaker_block.chat_message": "Sprecher Nachricht",
-  "gui.supplementaries.speaker_block.narrator_message": "Chat Nachricht",
+  "gui.supplementaries.speaker_block.chat_message": "Chat Nachricht",
+  "gui.supplementaries.speaker_block.narrator_message": "Sprecher Nachricht",
   "entity.supplementaries.firefly": "Glühwürmchen",
   "block.supplementaries.firefly_jar": "Glühwürmchengefäß",
   "item.supplementaries.firefly": "Glühwürmchen-Spawn-Ei",
   "globe.supplementaries.moon": "Mond",
   "globe.supplementaries.earth": "Erde",
-  "globe.supplementaries.flat": "Flat",
+  "globe.supplementaries.flat": "Scheibe",
   "message.supplementaries.command.globe_changed": "Globus Seed geändert",
-  "message.supplementaries.command.globe_reset": "Globe seed reset",
+  "message.supplementaries.command.globe_reset": "Globe Seed zurückgesetzt",
   "block.supplementaries.hourglass": "Sanduhr",
   "block.supplementaries.globe": "Globus",
   "block.supplementaries.sconce_lever": "Geheimer Schalter",
@@ -58,7 +58,7 @@
 
   "message.supplementaries.hourglass": "Akzeptiert jeden Staub, Sand oder jedes Pulver",
   "message.supplementaries.cage": "[Shift] um zu platzieren",
-  "gui.supplementaries.safe.name": "%1$s's %2$s",
+  "gui.supplementaries.safe.name": "%1$ss %2$s",
   "message.supplementaries.safe.cleared": "Besitzer entfernt",
   "message.supplementaries.safe.owner": "Dieser Safe gehört %s",
   "gui.supplementaries.doormat.edit": "Fußabtreter Nachricht bearbeiten",
@@ -73,57 +73,57 @@
   "block.supplementaries.gold_door": "Goldende Tür",
   "block.supplementaries.gold_trapdoor": "Goldene Falltür",
   "block.supplementaries.crimson_lantern": "Purpur Lanterne",
-  "message.supplementaries.blackboard": "Drawn",
-  "gui.supplementaries.blackboard.clear": "Clear",
-  "block.supplementaries.hanging_flower_pot": "Hanging Flower Pot",
-  "block.supplementaries.directional_cake": "Directional Cake",
+  "message.supplementaries.blackboard": "Beschrieben",
+  "gui.supplementaries.blackboard.clear": "Gereinigt",
+  "block.supplementaries.hanging_flower_pot": "Hängender Blumentopf",
+  "block.supplementaries.directional_cake": "Ausgerichteter Kuchen",
   "block.supplementaries.rope": "Seil",
-  "block.supplementaries.bamboo_spikes": "Bamboo Spikes",
-  "item.supplementaries.bamboo_spikes_tipped": "Tipped Bamboo Spikes",
-  "message.supplementaries.safe.incorrect_key": "You do not have the correct key",
-  "message.supplementaries.safe.locked": "This safe is locked",
-  "gui.supplementaries.safe.password": "%2$s key: %1$s",
-  "message.supplementaries.safe.bound": "Locked",
-  "message.supplementaries.safe.assigned_key": "Assigned to '%s' key",
-  "item.supplementaries.key": "Key",
+  "block.supplementaries.bamboo_spikes": "Bambusfalle",
+  "item.supplementaries.bamboo_spikes_tipped": "Getränkte Bambusfalle",
+  "message.supplementaries.safe.incorrect_key": "Du hast keinen passenden Schlüssel",
+  "message.supplementaries.safe.locked": "Dieser Tresor ist verschlossen",
+  "gui.supplementaries.safe.password": "%2$s Schlüssel: %1$s",
+  "message.supplementaries.safe.bound": "Verschlossen",
+  "message.supplementaries.safe.assigned_key": "Verknüpft mit '%s' Schlüssel",
+  "item.supplementaries.key": "Schlüssel",
   "supplementaries.comment8": "For translation remove the %s and translate as if it was 'tipped bamboo spikes'",
   "supplementaries.comment9": "You could also leave the %s which will get filled by the translated potion name from tipped arrows",
   "supplementaries.comment10": "if you do that try it out in game since it might just work fine",
-  "item.supplementaries.bamboo_spikes_tipped_effect": "Bamboo Spikes of %s",
-  "death.attack.supplementaries.bamboo_spikes": "%1$s was impaled on a spike",
-  "death.attack.supplementaries.bamboo_spikes.player": "%1$s impaled on a spike whilst fighting %2$s",
-  "block.supplementaries.netherite_door": "Netherite Door",
-  "block.supplementaries.netherite_trapdoor": "Netherite Trapdoor",
-  "block.supplementaries.pancake": "Pancake",
-  "message.supplementaries.door.locked": "This door is locked",
-  "message.supplementaries.trapdoor.locked": "This trapdoor is locked",
-  "item.supplementaries.firefly_spawn_egg": "Firefly Spawn Egg",
-  "block.supplementaries.lock_block": "Lock Block",
-  "block.supplementaries.checker_block": "Checker Block",
-  "message.supplementaries.lock_block.locked": "This block is locked",
-  "fluid.supplementaries.jar_fluid": "Jar Fluid",
-  "fluid.supplementaries.experience": "Experience",
+  "item.supplementaries.bamboo_spikes_tipped_effect": "%s getränkte Bambusfalle",
+  "death.attack.supplementaries.bamboo_spikes": "%1$s wurde aufgespießt",
+  "death.attack.supplementaries.bamboo_spikes.player": "%1$s wurde aufgespießt im Kampf gegen %2$s",
+  "block.supplementaries.netherite_door": "Netherit Tür",
+  "block.supplementaries.netherite_trapdoor": "Netherit Falltür",
+  "block.supplementaries.pancake": "Pfannkuchen",
+  "message.supplementaries.door.locked": "Diese Tür ist verschlossen",
+  "message.supplementaries.trapdoor.locked": "Diese Falltür ist verschlossen",
+  "item.supplementaries.firefly_spawn_egg": "Glühwürmchen Spawn-Ei",
+  "block.supplementaries.lock_block": "Schloss Block",
+  "block.supplementaries.checker_block": "Karierter Block",
+  "message.supplementaries.lock_block.locked": "Dieser Block ist verschlossen",
+  "fluid.supplementaries.jar_fluid": "Gefäßflüssigkeit",
+  "fluid.supplementaries.experience": "Erfahrung",
   "message.supplementaries.fluid_tooltip": "%s: %d mBtl",
-  "fluid.supplementaries.honey": "Honey",
-  "fluid.supplementaries.milk": "Milk",
-  "fluid.supplementaries.slime": "Slime",
-  "itemGroup.jars": "Jars",
-  "item.supplementaries.flax": "Flax",
-  "item.supplementaries.flax_seeds": "Flax Seeds",
-  "item.supplementaries.rope_arrow": "Rope Arrow",
-  "block.supplementaries.potted_flax": "Potted Flax",
-  "entity.supplementaries.brick_projectile": "Brick Projectile",
-  "entity.supplementaries.rope_arrow": "Rope Arrow",
-  "block.supplementaries.checker_slab": "Checker Slab",
-  "message.supplementaries.rope_arrow": "Rope override: %s",
-  "block.supplementaries.pulley_block": "Pulley Block",
-  "block.supplementaries.fodder": "Fodder",
-  "item.supplementaries.bomb": "Bomb",
-  "item.supplementaries.bomb_projectile": "Bomb",
-  "block.supplementaries.flax_block": "Flax Bale",
-  "subtitles.supplementaries.bomb": "Bomb Explosion",
-  "message.supplementaries.anti_repost": "You seem to have downloaded Supplementaries from a malicious site :( Get the real version %s.",
-  "message.supplementaries.anti_repost_link": "here",
+  "fluid.supplementaries.honey": "Honig",
+  "fluid.supplementaries.milk": "Milch",
+  "fluid.supplementaries.slime": "Schleim",
+  "itemGroup.jars": "Gefäße",
+  "item.supplementaries.flax": "Flachs",
+  "item.supplementaries.flax_seeds": "Flachs Saat",
+  "item.supplementaries.rope_arrow": "Seilpfeil",
+  "block.supplementaries.potted_flax": "Eingetopfter Flachs",
+  "entity.supplementaries.brick_projectile": "Ziegelsteingeschoss",
+  "entity.supplementaries.rope_arrow": "Seilfpeil",
+  "block.supplementaries.checker_slab": "Karierte Platte",
+  "message.supplementaries.rope_arrow": "Seil überschreibt: %s",
+  "block.supplementaries.pulley_block": "Flaschenzug",
+  "block.supplementaries.fodder": "Futter",
+  "item.supplementaries.bomb": "Bombe",
+  "item.supplementaries.bomb_projectile": "Bombe",
+  "block.supplementaries.flax_block": "Flachsballen",
+  "subtitles.supplementaries.bomb": "Bombe explodiert",
+  "message.supplementaries.anti_repost": "Du hast Supplementaries von einer gefährlichen Seite heruntergeladen. :( Lad es Dir auf einer offiziellen Quelle %s.",
+  "message.supplementaries.anti_repost_link": "hier",
   "message.supplementaries.anti_repost_2": "Edit configs to disable this warning",
   "block.supplementaries.jar_boat": "Boat in a Jar",
   "block.supplementaries.magma_cream_block": "Magma Cream Block",
